class Container {
  String id;
  String? name;
  String? type;
  String? imagePath;
  String? sequentialBuild;
  String? moduleDestination;
  String? currentLocation;

  Container(this.id);
}
