appId: http://localhost:62152
---
# Test 1: Valid Login
- launchApp
- waitForAnimationToEnd
- tapOn:
    text: "email"
- inputText: "backoffice.test@rescuenet.net"
- tapOn:
    text: "password"
- inputText: "testpassword"
- tapOn:
    text: "login"
- waitForAnimationToEnd
- assertVisible:
    text: "Container"

---
# Test 2: Invalid Credentials
- launchApp
- waitForAnimationToEnd
- tapOn:
    text: "Email"
- inputText: "test@rescuenet.net"
- tapOn:
    text: "Password"
- inputText: "wrongpassword"
- tapOn:
    text: "Login"
- waitForAnimationToEnd
- assertVisible:
    text: "Email"
- assertVisible:
    text: "Password"

---
# Test 3: User Registration
- launchApp
- waitForAnimationToEnd
- tapOn:
    text: "Register instead"
- waitForAnimationToEnd
- tapOn:
    text: "Email"
- inputText: "test-123@rescuenet.net"
- tapOn:
    text: "Password"
- inputText: "TestPassword123!"
- tapOn:
    text: "Register"
- waitForAnimationToEnd
- assertVisible:
    text: "Container"

---
# Test 4: Invalid Email Domain
- launchApp
- waitForAnimationToEnd
- tapOn:
    text: "Register instead"
- waitForAnimationToEnd
- tapOn:
    text: "Email"
- inputText: "test@gmail.com"
- tapOn:
    text: "Password"
- inputText: "TestPassword123!"
- tapOn:
    text: "Register"
- waitForAnimationToEnd
- assertVisible:
    text: "Email"
